--- a/style.css
+++ b/style.css
@@ -6,3 +6,29 @@ Description: Acme WordPress Theme
 Author: Swapnil
 Author URI: https://swapnil.com
  */
+
+.navbar-dark .navbar-nav a {
+    color: rgba(255, 255, 255, .5);
+}
+
+.navbar-nav a {
+    padding-right: 0;
+    padding-left: 0;
+}
+
+.navbar-expand-lg .navbar-nav a {
+    padding-right: .5rem;
+    padding-left: .5rem;
+}
+
+.navbar-nav a {
+    display: block;
+    padding-top: 0.5rem;
+    padding-right: 1rem;
+    padding-bottom: 0.5rem;
+    padding-left: 1rem;
+}
+
+.navbar-dark .navbar-nav a:hover {
+    color: rgba(255,255,255,.75);
+}
